--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,7 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-beta01'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 
     // Retrofit
     def retrofit = "2.9.0"
